<resources>
    <string name="About">About</string>
    <string name="AppLog_AppStarted">The SBMS Application started.</string>
    <string name="app_bluetoothConnect">The BMS bluetooth link connected successfully.</string>
    <string name="app_bluetoothDisconnect">The BMS bluetooth link disconnected.</string>
    <string name="app_clearLog">Clear Log</string>
    <string name="app_gpsTrackOff">GPS tracking finished.</string>
    <string name="app_gpsTrackOn">GPS tracking started.</string>
    <string name="app_log">BMS Log</string>
    <string name="app_logCleared">Application Log Cleared.</string>
    <string name="app_name">SBMS</string>
    <string name="app_settings">App Settings</string>
    <string name="app_summaryVarsReset">The summary values were reset by the user.</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="balance">Balance Status</string>
    <string name="bmsSettingTitle">BMS Parameters</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="btnAppSettingSet">Set</string>
    <string name="btnParamRefresh">Refresh</string>
    <string name="cellBalance">cells are now balancing</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="charge">Charge Status</string>
    <string name="chargeDisable">charge disabled</string>
    <string name="chargeEnable">charge enabled</string>
    <string name="chargeReadings">Charge Readings</string>
    <string name="chartBattCurr">Battery (Amps)</string>
    <string name="chartBattData">Battery Data</string>
    <string name="chartBattVolt">Battery (Volts)</string>
    <string name="chartLegend">Volts/Amps</string>
    <string name="chartTitle">Battery Data</string>
    <string name="confirm">Confirmation - </string>
    <string name="delConfirm">Press Yes to delete\10Press Back to cancel</string>
    <string name="delRouteFile">Delete Selected Routes</string>
    <string name="delSelFiles">Delete Selected Files</string>
    <string name="enableOverVoltAlarm">Overvoltage Alarm Enabled</string>
    <string name="end_app_warning">GPS tracking is in progress.\10Are you sure you want to quit the app?</string>
    <string name="exception_GPS_CloseStream">Failed to close the GPS file</string>
    <string name="exception_GPS_CreateStream">Failed to open a file for GPS recording:</string>
    <string name="exception_GPS_WriteFail">Failed to write the GPS location to file</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="google_maps_key">AIzaSyA_Rz8HYHbg-CXSCvF1AtvTn2HkXIl2HS8</string>
    <string name="gps_got_lock">GPS lock acquired. Recording in progress.</string>
    <string name="gps_recordGPS">Force record GPS</string>
    <string name="gps_speedunit">mph</string>
    <string name="gps_title">GPS</string>
    <string name="gps_wait_lock">Waiting for a GPS lock</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="liveReadings">Live Readings</string>
    <string name="main_AHremain">AH remaining</string>
    <string name="main_Watts">Watts</string>
    <string name="main_amps">Amps</string>
    <string name="main_btnSettings">Settings</string>
    <string name="main_elapsedTime">Elapsed Time</string>
    <string name="main_volts">Volts</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="no">No</string>
    <string name="noBTConn">No Bluetooth Connection</string>
    <string name="no_route_data">No route data available</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="power">Output Status</string>
    <string name="powerDisable">power disabled</string>
    <string name="powerEnable">power enabled</string>
    <string name="pref_amps_end_seconds">Stop GPS tracking when zero Amps for (S)</string>
    <string name="pref_amps_start_gps">Trig 1: Initiate when Amps rises above</string>
    <string name="pref_amps_start_seconds">Trig 2: Log after Trig 1 is reached for (S)</string>
    <string name="pref_description_GPSAutoTrack">Configure the below settings before enabling this feature.</string>
    <string name="pref_display_fahrenheit">Display temps in Fahrenheit</string>
    <string name="pref_gps_interval">Interval between GPS logs (S)</string>
    <string name="pref_gps_logCellData">Log cell data</string>
    <string name="pref_gps_showSpeedOnMain">Swap amps with speed</string>
    <string name="pref_gps_speed_summary">Show speed when GPS tracking</string>
    <string name="pref_header_general">GPS Settings</string>
    <string name="pref_title_EnableGPSAutoTrack">Enable GPS Auto Tracking</string>
    <string name="pref_title_cel_fah">Display temps in Fahrenheit</string>
    <string name="pref_title_revamps">Reverse Amps Display</string>
    <string name="pref_title_speed_display_units">Speed Display Units</string>
    <string name="routeSelectTitle">Select Route To Display</string>
    <string name="route_endpos">End Position</string>
    <string name="route_noDataFiles">No route data file found</string>
    <string name="route_startpos">Start Position</string>
    <string name="scan_bluetooth_clickconn">Tap Device Name To Connect</string>
    <string name="scan_bluetooth_finished">Scan Finished</string>
    <string name="scan_bluetooth_scanning">Scanning Bluetooth Devices</string>
    <string name="search_menu_title">Search</string>
    <string name="settings">BMS Controls</string>
    <string name="settings_Balance">Balance Cells</string>
    <string name="settings_Factory">Factory Reset</string>
    <string name="settings_Reboot">Reboot</string>
    <string name="settings_Zero">Zero Current</string>
    <string name="settings_chargeOff">Charge Off</string>
    <string name="settings_chargeOn">Charge On</string>
    <string name="settings_powerOff">Power Off</string>
    <string name="settings_powerOn">Power On</string>
    <string name="settings_removeBTDev">Remove connected Bluetooth device</string>
    <string name="settings_title">Settings</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="summaryDesc">Values Recorded Since Last Reset</string>
    <string name="summaryDistance">Distance Travelled:</string>
    <string name="summaryHighAmps">Max Amps Recorded:</string>
    <string name="summaryHighFET">Highest FET Temp:</string>
    <string name="summaryHighSpeed">Top Speed Travelled:</string>
    <string name="summaryHighWatts">Max Watts Recorded:</string>
    <string name="summaryLowestVolt">Lowest Voltage Recorded:</string>
    <string name="summaryReset">Reset Summary</string>
    <string name="summaryResetDesc">Press Yes to reset the summary values</string>
    <string name="summaryResetTitle">Reset Summary Values</string>
    <string name="summaryTitle">Summary Readings</string>
    <string name="summaryTitlePower">Power Values:</string>
    <string name="summaryTitleTemp">Temperature Values:</string>
    <string name="summaryTitleTravel">Travel Values</string>
    <string name="title_activity_app_settings">App Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_scan_bluetooth_dev">Pair With Bluetooth Device</string>
    <string name="toast_noBluetooth">Bluetooth not available</string>
    <string name="troubleshoot">Instructions/FAQ</string>
</resources>